--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   font-family: 'Montserrat', sans-serif;
 }
 
+/* styling for header component */
 .header{
   width: 100%;
   height: 80px;
@@ -70,4 +71,17 @@
   height: 100%;
   color: white;
   font-size: 16px;
+}
+
+/* styling for post form */
+.item-form{
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  height: 300px;
+  margin: auto;
+  justify-content: space-evenly;
+  background-color: rgb(167, 163, 163);
+  border-radius: 6px ;
+  box-shadow: 6px 6px 2px 1px rgba(65, 65, 95, 0.2);
 }
