--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,14 @@
 :root{
-  --black: --black;
+  --black: black;
+  --gray0: rgb(34, 34, 34);
   --gray1: rgb(65, 65, 65);
   --font-white: white;
   --gray2: gray;
+}
+
+#root{
+  padding-bottom: 60px;
+
 }
 
 *{
@@ -14,7 +20,7 @@
 }
 
 body{
-  background-color: var(--gray1);
+  background-color: var(--gray0);
 }
 
 /* styling for header component */
@@ -22,7 +28,7 @@ body{
   width: 100%;
   height: 80px;
   display: block;
-  background-color: #101010;
+  background-color: var(--black);
 }
 
 .inner-header{
@@ -62,7 +68,7 @@ body{
 
 .navigation{
   float: right;
-  height: 100%;
+  height: 50%;
 }
 
 .navigation a{
@@ -82,6 +88,10 @@ body{
   height: 100%;
   color: white;
   font-size: 16px;
+}
+.navigation a:hover {
+  background-color: var(--gray0);
+  cursor:grab;
 }
 
 /* styling for post form */
@@ -133,6 +143,18 @@ input[type="submit"]:hover{
   font-weight: bold;
 }
 
+.form-switch-button{
+  padding: 5px;
+  box-shadow: 0 20px 20px -10px rgb(199, 199, 199);
+  transition: .2s linear;
+}
+.form-switch-button:hover{
+  color: white;
+  background-color: rgb(35, 205, 26);
+  border: none;
+  font-weight: bold;
+}
+
 /* signup page styling */
 
 .signup-form {
@@ -147,4 +169,26 @@ input[type="submit"]:hover{
   padding: 20px;
   border-radius: 6px;
   margin-bottom: 20px;
+}
+
+/* styling for profile page */
+.profile-page-container{
+  display: flex;
+}
+
+.profile-info-container{
+  color:var(--font-white);
+  display: flex;
+  flex-direction: column;
+  background-color: var(--gray2);
+}
+/* styling for footer */
+.footer{
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  max-width: 100%;
+  height: 10%;
+  background-image: url("./image0.png");
 }
