--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,18 @@
   --gray2: gray;
 }
 
-#root{
-  padding-bottom: 60px;
+html{
+  margin:0;
+  height:100%;
+}
+body{
+  margin:0;
+  height:100%;
+}
 
+#root {
+  width: 100%;
+  height: 100%;
 }
 
 *{
@@ -25,10 +34,12 @@ body{
 
 /* styling for header component */
 .header{
+  position: fixed;
   width: 100%;
   height: 80px;
   display: block;
   background-color: var(--black);
+  z-index: 9001;
 }
 
 .inner-header{
@@ -94,6 +105,21 @@ body{
   cursor:grab;
 }
 
+
+/*styling for main page view  */
+.app-container{
+  height:100%;
+  min-height: 100vh;
+}
+
+.main-page-display{
+  /* background-color: red; */
+  position: relative;
+  padding-top: 80px;
+  min-height: 100%;
+  padding-bottom: 300px;
+}
+
 /* styling for post form */
 .item-form{
   display: flex;
@@ -103,7 +129,7 @@ body{
   margin: auto;
   justify-content: space-evenly;
   background-color: rgb(167, 163, 163);
-  border-radius: 6px ;
+  border-radius: 10px ;
   box-shadow: 6px 6px 2px 1px rgba(65, 65, 95, 0.2);
   padding: 10px;
 }
@@ -177,6 +203,7 @@ input[type="submit"]:hover{
 
 /* styling for profile page */
 .profile-page-container{
+  padding-top: 80px;
   display: flex;
   padding-left: 20px;
   position: relative;
@@ -194,9 +221,30 @@ input[type="submit"]:hover{
 .footer{
   position: absolute;
   left: 0;
-  bottom: 0;
   right: 0;
+  bottom: 0;
+  width: 100%;
   max-width: 100%;
-  height: 10%;
+  height: 100%;
+  object-fit: contain;
+  max-height: 80px;
   background-image: url("./image0.png");
+  background-size: auto 100%;
+  background-repeat: no-repeat;
+  background-color: black;
+  background-position: center;
+}
+input{
+  border-radius: 10px;
+  padding: 5px;
+  padding-left: 10px;
+  margin-left: 10px;
+}
+button {
+  border-radius: 10px;
+  padding: 5px;
+}
+button:hover {
+  background: green;
+  transition: 500ms;
 }
