--- a/src/App.css
+++ b/src/App.css
@@ -145,7 +145,8 @@ body{
 }
 
 .listing-card{
-  height: 200px;
+  color: var(--font-white);
+  height: 250px;
   width: 150px;
   display: flex;
   flex-direction: column;
@@ -158,7 +159,9 @@ body{
   margin: 10px;
 }
 .listing-card h3{
-  position: relative;
+  background-color: black;
+  border-radius: 10px;
+  padding: 3px;
 }
 
 input[type="submit"]{
@@ -215,7 +218,27 @@ input[type="submit"]:hover{
   color:var(--font-white);
   display: flex;
   flex-direction: column;
+  background-color: var(--gray1);
+  height: 200px;
+  border-radius: 5px;
+  justify-content: center;
+}
+
+.profile-selection-Link{
   background-color: var(--gray2);
+  color: var(--font-white);
+  border: 1px solid orange;
+  border-radius: 8px;
+  align-content: center;
+  display: flex;
+  padding: 20px;
+  border-radius: 6px;
+  margin-bottom: 20px;
+}
+
+.user-listings-container{
+  display:flex;
+  flex-wrap: wrap;
 }
 /* styling for footer */
 .footer{
