--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,6 @@ body{
 
 /* styling for header component */
 .header{
-  /* max-width: 100vh; */
   position: fixed;
   width: 100%;
   height: 80px;
@@ -50,7 +49,6 @@ body{
   height: 100%;
   display: block;
   margin: 0 auto;
-  /* background-color: red; */
 }
 
 .logo-container{
@@ -58,7 +56,7 @@ body{
   width: 50%;
   display: table;
   float: left;
-   object-fit: contain;
+  object-fit: contain;
   max-height: 80px;
   background-image: url("./image0.jpeg");
   background-size: auto 100%;
@@ -116,7 +114,6 @@ body{
 }
 
 .main-page-display{
-  /* background-color: red; */
   position: relative;
   padding-top: 80px;
   min-height: 100%;
@@ -155,7 +152,6 @@ body{
   display: flex;
   flex-direction: row;
   align-content: center;
-  /* justify-content: center; */
   border: solid gray;
   border-radius: 6px;
   box-shadow: 3px 3px 3px var(--yellow);
@@ -164,7 +160,6 @@ body{
 }
 
 .listing-content-left{
-  /* color: var(--font-white); */
   font-size: 0.875rem;
   max-width: 250px;
   max-width: 200px;
@@ -172,15 +167,8 @@ body{
   min-width: 200px;
   display: flex;
   flex-direction: column;
-  /* align-content: center;
-  justify-content: center; */
-  /* border: solid gray; */
   justify-content: space-evenly;
   margin-right: 1em;
-  /* border-radius: 6px; */
-  /* box-shadow: 3px 3px 3px rgb(247, 117, 31); */
-  /* padding: 10px;
-  margin: 10px; */
 }
 .listing-content-left img{
   max-height: 159px;
@@ -340,6 +328,7 @@ button:hover {
 .message-page-container{
   padding-top: 50px;
   display:flex;
+  flex-direction: ;
   justify-content: center;
 }
 
@@ -351,4 +340,32 @@ button:hover {
 .direct-message-container{
   border: solid var(--red);
   color:white;
+  display: flex;
+  flex-direction: column;
+  width: 800px;
+  height: 800px;
+}
+.chat-container{
+  width: 800px;
+  height: 800px;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+}
+.receiver-chat-bubble{
+  padding: 3px;
+  margin: 7px;
+  border: solid var(--red);
+  border-radius: 8px;
+  width: 240px;
+  align-self: flex-start;
+}
+.sender-chat-bubble{
+  padding: 3px;
+  margin: 2px;
+  border: solid gray;
+  border-radius: 8px;
+  width: 240px;
+  justify-content: right;
+  align-self: flex-end;
 }
