--- a/src/App.css
+++ b/src/App.css
@@ -302,8 +302,8 @@ input[type="submit"]:hover{
   max-width: 100%;
   height: 100%;
   object-fit: contain;
-  max-height: 80px;
-  background-image: url("./image0.png");
+  max-height: 200px;
+  background-image: url("./image0.jpeg");
   background-size: auto 100%;
   background-repeat: no-repeat;
   background-color: black;
@@ -343,6 +343,7 @@ button:hover {
   flex-direction: column;
   width: 800px;
   height: 800px;
+  background-color: var(--gray0);
 }
 .chat-container{
   width: 800px;
@@ -350,6 +351,7 @@ button:hover {
   display: flex;
   flex-direction: column;
   overflow-y: auto;
+  background-color: var(--gray0);
 }
 .receiver-chat-bubble{
   padding: 3px;
@@ -367,4 +369,21 @@ button:hover {
   width: 240px;
   justify-content: right;
   align-self: flex-end;
+}
+
+.chat-entry-container {
+  display: flex;
+  flex-direction: row;
+  justify-content:center ;
+  
+}
+
+.chat-input-form{
+  width: 80%;
+  display: flex;
+  justify-content:flex-end;
+}
+
+.message-input{
+  width: 400px;
 }
