--- a/src/App.css
+++ b/src/App.css
@@ -249,6 +249,7 @@ input[type="submit"]:hover{
   background-color: white;
   padding: 20px;
   border-radius: 6px;
+  margin-top: 100px;
   margin-bottom: 20px;
 }
 
