--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,14 @@
   --font-white: white;
   --gray2: gray;
   --yellow: rgb(255, 210, 87);
-  --red: rgb(245, 115, 115);
+  --red: rgb(233, 78, 78);
 }
 
 html{
   margin:0;
   height:100%;
 }
+
 body{
   margin:0;
   height:100%;
@@ -34,7 +35,7 @@ body{
   background-color: var(--gray0);
 }
 
-/* styling for header component */
+/* styling for header component -----------------------------------------------------*/
 .header{
   position: fixed;
   width: 100%;
@@ -101,13 +102,13 @@ body{
   color: white;
   font-size: 16px;
 }
+
 .navigation a:hover {
   background-color: var(--gray0);
-  cursor:grab;
+  cursor: pointer;
 }
 
-
-/*styling for main page view  */
+/*styling for main page view  -------------------------------------------------------*/
 .app-container{
   height:100%;
   min-height: 100vh;
@@ -120,22 +121,22 @@ body{
   padding-bottom: 300px;
 }
 
-/* styling for post form */
+/* styling for post form ---------------------------------------------------------*/
 .item-form{
   display: flex;
   flex-direction: column;
-  width: 300px;
-  height: 300px;
+  width: 400px;
+  height: 400px;
   margin: auto;
   justify-content: space-evenly;
   background-color: rgb(167, 163, 163);
   border-radius: 10px ;
   box-shadow: 6px 6px 2px 1px rgba(65, 65, 95, 0.2);
   padding: 10px;
+  margin-top: 100px;
 }
 
-
-/* styling for Trade page */
+/* styling for Trade page ---------------------------------------------------------*/
 .trade-listings-container{
   height: 100%;
   width: 100%;
@@ -143,7 +144,7 @@ body{
   flex-wrap: wrap;
   padding: 10px;
   justify-content: center;
-  
+
 }
 
 .listing-card{
@@ -156,9 +157,16 @@ body{
   align-content: center;
   border: solid gray;
   border-radius: 6px;
-  box-shadow: 3px 3px 3px var(--yellow);
   padding: 10px;
   margin: 10px;
+}
+
+.listing-card:nth-child(odd){
+  box-shadow: 3px 3px 3px var(--yellow);
+}
+
+.listing-card:nth-child(even){
+  box-shadow: 3px 3px 3px var(--red);
 }
 
 .listing-content-left{
@@ -181,12 +189,14 @@ body{
   border: solid gray;
   display: block;
   margin: 0.7em auto 0.7em;
+  margin-top: 21px;
 }
 
 .listing-card h3{
   background-color: black;
-  border-radius: 10px;
+  border-radius: 2px;
   padding: 3px;
+  height: 30px;
 }
 
 .asking-price{
@@ -195,7 +205,6 @@ body{
 
 .asking-price span{
   font-weight: 800;
-  
 }
 
 .asking-price::after{
@@ -212,12 +221,18 @@ body{
   background-color: var(--gray1);
   color: var(--red);
 }
-/* styling for buttons */
+
+.trade-listing-message-link:hover{
+  cursor: pointer;
+}
+
+/* styling for buttons ---------------------------------------------------------*/
 input[type="submit"]{
   padding: 5px;
   box-shadow: 0 20px 20px -10px rgb(199, 199, 199);
   transition: .2s linear;
 }
+
 input[type="submit"]:hover{
   color: white;
   background-color: rgb(35, 205, 26);
@@ -230,6 +245,7 @@ input[type="submit"]:hover{
   box-shadow: 0 20px 20px -10px rgb(199, 199, 199);
   transition: .2s linear;
 }
+
 .form-switch-button:hover{
   color: white;
   background-color: rgb(35, 205, 26);
@@ -237,13 +253,11 @@ input[type="submit"]:hover{
   font-weight: bold;
 }
 
-/* signup page styling */
-
+/* signup page styling ---------------------------------------------------------*/
 .signup-form {
   display: flex;
   flex-direction: column;
   width: 300px;
-  /* center to the parent */
   height: 300px;
   margin: auto;
   justify-content: space-evenly;
@@ -254,7 +268,13 @@ input[type="submit"]:hover{
   margin-bottom: 20px;
 }
 
-/* styling for profile page */
+.alert{
+  color: var(--red);
+  background-color: rgb(236, 236, 236);
+  border-radius: 3px;
+}
+
+/* styling for profile page ---------------------------------------------------------*/
 .profile-page-container{
   padding-top: 80px;
   display: flex;
@@ -269,10 +289,10 @@ input[type="submit"]:hover{
   display: flex;
   flex-direction: column;
   background-color: var(--gray1);
-  height: 200px;
+  height: 300px;
+  width: 300px;
   border-radius: 5px;
   justify-content: center;
-  width: 10rem;
   align-content: flex-start ;
   align-items: center;
 }
@@ -281,6 +301,7 @@ input[type="submit"]:hover{
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
 .profile-info-container a{
   justify-content: space-between;
 }
@@ -295,13 +316,16 @@ input[type="submit"]:hover{
   padding: 20px;
   border-radius: 6px;
   margin-bottom: 20px;
+  width: 130px;
+  text-align: center;
 }
 
 .user-listings-container{
   display:flex;
   flex-wrap: wrap;
 }
-/* styling for footer */
+
+/* styling for footer ---------------------------------------------------------*/
 .footer{
   position: absolute;
   left: 0;
@@ -318,22 +342,25 @@ input[type="submit"]:hover{
   background-color: black;
   background-position: center;
 }
+
 input{
   border-radius: 10px;
   padding: 5px;
   padding-left: 10px;
   margin-left: 10px;
 }
+
 button {
   border-radius: 10px;
   padding: 5px;
 }
+
 button:hover {
   background: green;
   transition: 500ms;
 }
 
-/* chat message page styling */
+/* chat message page styling ---------------------------------------------------------*/
 .message-page-container{
   padding-top: 50px;
   display:flex;
@@ -344,11 +371,10 @@ button:hover {
   border: solid var(--yellow);
   background-color: var(--gray1);
   color:white
-
 }
+
 .message-sender-container h1{
   padding: 10px;
-
 }
 
 .direct-message-container{
@@ -360,6 +386,7 @@ button:hover {
   height: 800px;
   background-color: var(--gray0);
 }
+
 .chat-container{
   width: 800px;
   height: 800px;
@@ -367,9 +394,9 @@ button:hover {
   flex-direction: column;
   overflow-y: auto;
   background-color: var(--gray1);
-
 }
-.receiver-chat-bubble{
+
+.receiver-chat-container{
   padding: 3px;
   margin: 7px;
   border: solid var(--red);
@@ -377,7 +404,16 @@ button:hover {
   width: 240px;
   align-self: flex-start;
 }
-.sender-chat-bubble{
+.receiver-chat-bubble{
+  /* padding: 3px;
+  margin: 7px;
+  border: solid var(--red);
+  border-radius: 8px;
+  width: 240px;
+  align-self: flex-start; */
+}
+
+.sender-chat-container{
   padding: 3px;
   margin: 2px;
   border: solid gray;
@@ -385,6 +421,16 @@ button:hover {
   width: 240px;
   justify-content: right;
   align-self: flex-end;
+}
+
+.sender-chat-bubble{
+  /* padding: 3px;
+  margin: 2px;
+  border: solid gray;
+  border-radius: 8px;
+  width: 240px;
+  justify-content: right;
+  align-self: flex-end; */
 }
 
 .chat-entry-container {
